# study

./: .gitignore  .ls-lint.yml  .markdownlint.json  Makefile  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/cs/: index.md
docs/cs/computer-architecture/: index.md
docs/cs/computer-architecture/cpu/: index.md  simd.md
docs/cs/oop/: objects-connectivity.md
docs/cs/os/memory/tlb/: index.md
docs/cs/os/signals/: index.md
docs/cs/parallel-programming/: index.md  process-vs-thread.md
docs/cs/parallel-programming/examples/: work-with-threads.md
docs/cs/parallel-programming/ipc/: index.md
docs/cs/parallel-programming/laws/: amdahls-law.md
docs/javascripts/: katex.js
docs/math/: index.md
docs/stylesheets/: extra.css
